# swizzle

./: Cargo.toml  README.md  build.rs  flake.nix
benches/: rgba_to_bgra.rs
examples/: rgba_to_bgra.rs
src/: README.md  common.rs  lib.rs  simd.rs  sisd.rs
